manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-week-39c3
  labels: 
    app: todo-app-week-39c3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app-week-39c3
  template:
    metadata:
      labels:
        app: todo-app-week-39c3
    spec:
      containers:
      - name: todo-app-week-39c3
        image: rudrasankha/todo-app-week-39c3:40f2cfcb6ddc27d0913b53f2d8750757846fb453
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-week-39c3-service
  labels:
    app: todo-app-week-39c3
spec:
  selector:
    app: todo-app-week-39c3
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-week-39c3-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - week35c3.rudrasankha.com
    secretName: week35c3-tls
  rules:
  - host: week35c3.rudrasankha.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app-week-39c3-service
            port:
              number: 80
